[CrOS Tether] Do not perform host scans while the device is locked.

EasyUnlock tries to create Bluetooth connections at the lock screen, and
when both Instant Tethering and EasyUnlock try to create a Bluetooth
connection to the same device at the same time, they can cause
instability. By eliminating the possibility of this conflict, we work
around this issue.

Note that a full-fledged fix for this problem is in the works; see
https://crbug.com/752273.

Bug: 839522
Change-Id: I468515579ca46cabf279e11531ca489a71eb3255
Reviewed-on: https://chromium-review.googlesource.com/1045254
Commit-Queue: Kyle Horimoto <khorimoto@chromium.org>
Reviewed-by: James Hawkins <jhawkins@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556282}
Former-commit-id: e602d3a83ceaaa2d8e66e8282fc78fb7f9474df6